libqt6c/src/libqlistwidget.hpp

typedef struct QDropEvent QDropEvent;
typedef struct QEvent QEvent;
typedef struct QItemSelectionModel QItemSelectionModel;
typedef struct QListWidget QListWidget;
typedef struct QListWidgetItem QListWidgetItem;
typedef struct QMetaObject QMetaObject;
typedef struct QMimeData QMimeData;
typedef struct QModelIndex QModelIndex;
typedef struct QPoint QPoint;
typedef struct QRect QRect;
typedef struct QWidget QWidget;
QListWidget* QListWidget_new(QWidget* parent);
QListWidget* QListWidget_new2();
QMetaObject* QListWidget_MetaObject(const QListWidget* self);
void QListWidget_SetSelectionModel(QListWidget* self, QItemSelectionModel* selectionModel);
QListWidgetItem* QListWidget_Item(const QListWidget* self, int row);
int QListWidget_Row(const QListWidget* self, const QListWidgetItem* item);
void QListWidget_InsertItem(QListWidget* self, int row, QListWidgetItem* item);
void QListWidget_InsertItem2(QListWidget* self, int row, const libqt_string label);
void QListWidget_InsertItems(QListWidget* self, int row, const QStringList* labels);
void QListWidget_AddItem(QListWidget* self, const libqt_string label);
void QListWidget_AddItem2(QListWidget* self, QListWidgetItem* item);
void QListWidget_AddItems(QListWidget* self, const QStringList* labels);
QListWidgetItem* QListWidget_TakeItem(QListWidget* self, int row);
int QListWidget_Count(const QListWidget* self);
QListWidgetItem* QListWidget_CurrentItem(const QListWidget* self);
void QListWidget_SetCurrentItem(QListWidget* self, QListWidgetItem* item);
void QListWidget_SetCurrentItem2(QListWidget* self, QListWidgetItem* item, int command);
int QListWidget_CurrentRow(const QListWidget* self);
void QListWidget_SetCurrentRow(QListWidget* self, int row);
void QListWidget_SetCurrentRow2(QListWidget* self, int row, int command);
QListWidgetItem* QListWidget_ItemAt(const QListWidget* self, const QPoint* p);
QListWidgetItem* QListWidget_ItemAt2(const QListWidget* self, int x, int y);
QRect* QListWidget_VisualItemRect(const QListWidget* self, const QListWidgetItem* item);
void QListWidget_SortItems(QListWidget* self);
void QListWidget_SetSortingEnabled(QListWidget* self, bool enable);
bool QListWidget_IsSortingEnabled(const QListWidget* self);
void QListWidget_EditItem(QListWidget* self, QListWidgetItem* item);
void QListWidget_OpenPersistentEditor(QListWidget* self, QListWidgetItem* item);
void QListWidget_ClosePersistentEditor(QListWidget* self, QListWidgetItem* item);
bool QListWidget_IsPersistentEditorOpen(const QListWidget* self, QListWidgetItem* item);
QWidget* QListWidget_ItemWidget(const QListWidget* self, QListWidgetItem* item);
void QListWidget_SetItemWidget(QListWidget* self, QListWidgetItem* item, QWidget* widget);
void QListWidget_RemoveItemWidget(QListWidget* self, QListWidgetItem* item);
libqt_list /* of QListWidgetItem* */ QListWidget_SelectedItems(const QListWidget* self);
libqt_list /* of QListWidgetItem* */ QListWidget_FindItems(const QListWidget* self, const libqt_string text, int flags);
libqt_list /* of QListWidgetItem* */ QListWidget_Items(const QListWidget* self, const QMimeData* data);
QModelIndex* QListWidget_IndexFromItem(const QListWidget* self, const QListWidgetItem* item);
QListWidgetItem* QListWidget_ItemFromIndex(const QListWidget* self, const QModelIndex* index);
void QListWidget_DropEvent(QListWidget* self, QDropEvent* event);
void QListWidget_ScrollToItem(QListWidget* self, const QListWidgetItem* item);
void QListWidget_Clear(QListWidget* self);
void QListWidget_ItemPressed(QListWidget* self, QListWidgetItem* item);
void QListWidget_Connect_ItemPressed(QListWidget* self, intptr_t slot);
void QListWidget_ItemClicked(QListWidget* self, QListWidgetItem* item);
void QListWidget_Connect_ItemClicked(QListWidget* self, intptr_t slot);
void QListWidget_ItemDoubleClicked(QListWidget* self, QListWidgetItem* item);
void QListWidget_Connect_ItemDoubleClicked(QListWidget* self, intptr_t slot);
void QListWidget_ItemActivated(QListWidget* self, QListWidgetItem* item);
void QListWidget_Connect_ItemActivated(QListWidget* self, intptr_t slot);
void QListWidget_ItemEntered(QListWidget* self, QListWidgetItem* item);
void QListWidget_Connect_ItemEntered(QListWidget* self, intptr_t slot);
void QListWidget_ItemChanged(QListWidget* self, QListWidgetItem* item);
void QListWidget_Connect_ItemChanged(QListWidget* self, intptr_t slot);
void QListWidget_CurrentItemChanged(QListWidget* self, QListWidgetItem* current, QListWidgetItem* previous);
void QListWidget_Connect_CurrentItemChanged(QListWidget* self, intptr_t slot);
void QListWidget_CurrentTextChanged(QListWidget* self, const libqt_string currentText);
void QListWidget_Connect_CurrentTextChanged(QListWidget* self, intptr_t slot);
void QListWidget_CurrentRowChanged(QListWidget* self, int currentRow);
void QListWidget_Connect_CurrentRowChanged(QListWidget* self, intptr_t slot);
void QListWidget_ItemSelectionChanged(QListWidget* self);
void QListWidget_Connect_ItemSelectionChanged(QListWidget* self, intptr_t slot);
bool QListWidget_Event(QListWidget* self, QEvent* e);
QStringList QListWidget_MimeTypes(const QListWidget* self);
void QListWidget_OnMetaObject(const QListWidget* self, intptr_t slot);
QMetaObject* QListWidget_SuperMetaObject(const QListWidget* self);
void QListWidget_OnMetacast(QListWidget* self, intptr_t slot);
void* QListWidget_SuperMetacast(QListWidget* self, const char* param1);
void QListWidget_OnMetacall(QListWidget* self, intptr_t slot);
int QListWidget_SuperMetacall(QListWidget* self, int param1, int param2, void** param3);
void QListWidget_OnSetSelectionModel(QListWidget* self, intptr_t slot);
void QListWidget_SuperSetSelectionModel(QListWidget* self, QItemSelectionModel* selectionModel);
void QListWidget_OnDropEvent(QListWidget* self, intptr_t slot);
void QListWidget_SuperDropEvent(QListWidget* self, QDropEvent* event);
void QListWidget_OnEvent(QListWidget* self, intptr_t slot);
bool QListWidget_SuperEvent(QListWidget* self, QEvent* e);
void QListWidget_OnMimeTypes(const QListWidget* self, intptr_t slot);
void QListWidget_Delete(QListWidget* self);