QtBeef/src/Qt/qlistwidget.bf

extension CQt
{
	[LinkName("QListWidget_new")]
	public static extern QListWidget_Ptr QListWidget_new(void** parent);
	[LinkName("QListWidget_new2")]
	public static extern QListWidget_Ptr QListWidget_new2();
	[LinkName("QListWidget_Delete")]
	public static extern void QListWidget_Delete(QListWidget_Ptr self);
	[LinkName("QListWidget_MetaObject")]
	public static extern void** QListWidget_MetaObject(void* self);
	
	public function void QListWidget_OnMetaObject_action(void* self);
	[LinkName("QListWidget_OnMetaObject")]
	public static extern void** QListWidget_OnMetaObject(void* self, QListWidget_OnMetaObject_action _action);
	
	[LinkName("QListWidget_SuperMetaObject")]
	public static extern void** QListWidget_SuperMetaObject(void* self);
	[LinkName("QListWidget_Qt_Metacast")]
	public static extern void* QListWidget_Qt_Metacast(void* self, c_char* param1);
	
	public function void QListWidget_OnMetacast_action(void* self, c_char* param1);
	[LinkName("QListWidget_OnMetacast")]
	public static extern void* QListWidget_OnMetacast(void* self, QListWidget_OnMetacast_action _action);
	
	[LinkName("QListWidget_SuperMetacast")]
	public static extern void* QListWidget_SuperMetacast(void* self, c_char* param1);
	[LinkName("QListWidget_Qt_Metacall")]
	public static extern c_int QListWidget_Qt_Metacall(void* self, QMetaObject_Call param1, c_int param2, void** param3);
	
	public function void QListWidget_OnMetacall_action(void* self, QMetaObject_Call param1, c_int param2, void** param3);
	[LinkName("QListWidget_OnMetacall")]
	public static extern c_int QListWidget_OnMetacall(void* self, QListWidget_OnMetacall_action _action);
	
	[LinkName("QListWidget_SuperMetacall")]
	public static extern c_int QListWidget_SuperMetacall(void* self, QMetaObject_Call param1, c_int param2, void** param3);
	[LinkName("QListWidget_Tr")]
	public static extern libqt_string QListWidget_Tr(c_char* s);
	[LinkName("QListWidget_SetSelectionModel")]
	public static extern void QListWidget_SetSelectionModel(void* self, void** selectionModel);
	
	public function void QListWidget_OnSetSelectionModel_action(void* self, void** selectionModel);
	[LinkName("QListWidget_OnSetSelectionModel")]
	public static extern void QListWidget_OnSetSelectionModel(void* self, QListWidget_OnSetSelectionModel_action _action);
	
	[LinkName("QListWidget_SuperSetSelectionModel")]
	public static extern void QListWidget_SuperSetSelectionModel(void* self, void** selectionModel);
	[LinkName("QListWidget_Item")]
	public static extern void** QListWidget_Item(void* self, c_int row);
	[LinkName("QListWidget_Row")]
	public static extern c_int QListWidget_Row(void* self, void** item);
	[LinkName("QListWidget_InsertItem")]
	public static extern void QListWidget_InsertItem(void* self, c_int row, void** item);
	[LinkName("QListWidget_InsertItem2")]
	public static extern void QListWidget_InsertItem2(void* self, c_int row, libqt_string label);
	[LinkName("QListWidget_InsertItems")]
	public static extern void QListWidget_InsertItems(void* self, c_int row, void** labels);
	[LinkName("QListWidget_AddItem")]
	public static extern void QListWidget_AddItem(void* self, libqt_string label);
	[LinkName("QListWidget_AddItem2")]
	public static extern void QListWidget_AddItem2(void* self, void** item);
	[LinkName("QListWidget_AddItems")]
	public static extern void QListWidget_AddItems(void* self, void** labels);
	[LinkName("QListWidget_TakeItem")]
	public static extern void** QListWidget_TakeItem(void* self, c_int row);
	[LinkName("QListWidget_Count")]
	public static extern c_int QListWidget_Count(void* self);
	[LinkName("QListWidget_CurrentItem")]
	public static extern void** QListWidget_CurrentItem(void* self);
	[LinkName("QListWidget_SetCurrentItem")]
	public static extern void QListWidget_SetCurrentItem(void* self, void** item);
	[LinkName("QListWidget_SetCurrentItem2")]
	public static extern void QListWidget_SetCurrentItem2(void* self, void** item, void* command);
	[LinkName("QListWidget_CurrentRow")]
	public static extern c_int QListWidget_CurrentRow(void* self);
	[LinkName("QListWidget_SetCurrentRow")]
	public static extern void QListWidget_SetCurrentRow(void* self, c_int row);
	[LinkName("QListWidget_SetCurrentRow2")]
	public static extern void QListWidget_SetCurrentRow2(void* self, c_int row, void* command);
	[LinkName("QListWidget_ItemAt")]
	public static extern void** QListWidget_ItemAt(void* self, void** p);
	[LinkName("QListWidget_ItemAt2")]
	public static extern void** QListWidget_ItemAt2(void* self, c_int x, c_int y);
	[LinkName("QListWidget_VisualItemRect")]
	public static extern void* QListWidget_VisualItemRect(void* self, void** item);
	[LinkName("QListWidget_SortItems")]
	public static extern void QListWidget_SortItems(void* self);
	[LinkName("QListWidget_SetSortingEnabled")]
	public static extern void QListWidget_SetSortingEnabled(void* self, bool enable);
	[LinkName("QListWidget_IsSortingEnabled")]
	public static extern bool QListWidget_IsSortingEnabled(void* self);
	[LinkName("QListWidget_EditItem")]
	public static extern void QListWidget_EditItem(void* self, void** item);
	[LinkName("QListWidget_OpenPersistentEditor")]
	public static extern void QListWidget_OpenPersistentEditor(void* self, void** item);
	[LinkName("QListWidget_ClosePersistentEditor")]
	public static extern void QListWidget_ClosePersistentEditor(void* self, void** item);
	[LinkName("QListWidget_IsPersistentEditorOpen")]
	public static extern bool QListWidget_IsPersistentEditorOpen(void* self, void** item);
	[LinkName("QListWidget_ItemWidget")]
	public static extern void** QListWidget_ItemWidget(void* self, void** item);
	[LinkName("QListWidget_SetItemWidget")]
	public static extern void QListWidget_SetItemWidget(void* self, void** item, void** widget);
	[LinkName("QListWidget_RemoveItemWidget")]
	public static extern void QListWidget_RemoveItemWidget(void* self, void** item);
	[LinkName("QListWidget_SelectedItems")]
	public static extern void* QListWidget_SelectedItems(void* self);
	[LinkName("QListWidget_FindItems")]
	public static extern void* QListWidget_FindItems(void* self, libqt_string text, void* flags);
	[LinkName("QListWidget_Items")]
	public static extern void* QListWidget_Items(void* self, void** data);
	[LinkName("QListWidget_IndexFromItem")]
	public static extern void* QListWidget_IndexFromItem(void* self, void** item);
	[LinkName("QListWidget_ItemFromIndex")]
	public static extern void** QListWidget_ItemFromIndex(void* self, void** index);
	[LinkName("QListWidget_DropEvent")]
	public static extern void QListWidget_DropEvent(void* self, void** event);
	
	public function void QListWidget_OnDropEvent_action(void* self, void** event);
	[LinkName("QListWidget_OnDropEvent")]
	public static extern void QListWidget_OnDropEvent(void* self, QListWidget_OnDropEvent_action _action);
	
	[LinkName("QListWidget_SuperDropEvent")]
	public static extern void QListWidget_SuperDropEvent(void* self, void** event);
	[LinkName("QListWidget_ScrollToItem")]
	public static extern void QListWidget_ScrollToItem(void* self, void** item);
	[LinkName("QListWidget_Clear")]
	public static extern void QListWidget_Clear(void* self);
	[LinkName("QListWidget_ItemPressed")]
	public static extern void QListWidget_ItemPressed(void* self, void** item);
	
	public function void QListWidget_Connect_ItemPressed_action(void* self, void** item);
	[LinkName("QListWidget_Connect_ItemPressed")]
	public static extern void QListWidget_Connect_ItemPressed(void* self, QListWidget_Connect_ItemPressed_action _action);
	[LinkName("QListWidget_ItemClicked")]
	public static extern void QListWidget_ItemClicked(void* self, void** item);
	
	public function void QListWidget_Connect_ItemClicked_action(void* self, void** item);
	[LinkName("QListWidget_Connect_ItemClicked")]
	public static extern void QListWidget_Connect_ItemClicked(void* self, QListWidget_Connect_ItemClicked_action _action);
	[LinkName("QListWidget_ItemDoubleClicked")]
	public static extern void QListWidget_ItemDoubleClicked(void* self, void** item);
	
	public function void QListWidget_Connect_ItemDoubleClicked_action(void* self, void** item);
	[LinkName("QListWidget_Connect_ItemDoubleClicked")]
	public static extern void QListWidget_Connect_ItemDoubleClicked(void* self, QListWidget_Connect_ItemDoubleClicked_action _action);
	[LinkName("QListWidget_ItemActivated")]
	public static extern void QListWidget_ItemActivated(void* self, void** item);
	
	public function void QListWidget_Connect_ItemActivated_action(void* self, void** item);
	[LinkName("QListWidget_Connect_ItemActivated")]
	public static extern void QListWidget_Connect_ItemActivated(void* self, QListWidget_Connect_ItemActivated_action _action);
	[LinkName("QListWidget_ItemEntered")]
	public static extern void QListWidget_ItemEntered(void* self, void** item);
	
	public function void QListWidget_Connect_ItemEntered_action(void* self, void** item);
	[LinkName("QListWidget_Connect_ItemEntered")]
	public static extern void QListWidget_Connect_ItemEntered(void* self, QListWidget_Connect_ItemEntered_action _action);
	[LinkName("QListWidget_ItemChanged")]
	public static extern void QListWidget_ItemChanged(void* self, void** item);
	
	public function void QListWidget_Connect_ItemChanged_action(void* self, void** item);
	[LinkName("QListWidget_Connect_ItemChanged")]
	public static extern void QListWidget_Connect_ItemChanged(void* self, QListWidget_Connect_ItemChanged_action _action);
	[LinkName("QListWidget_CurrentItemChanged")]
	public static extern void QListWidget_CurrentItemChanged(void* self, void** current, void** previous);
	
	public function void QListWidget_Connect_CurrentItemChanged_action(void* self, void** current, void** previous);
	[LinkName("QListWidget_Connect_CurrentItemChanged")]
	public static extern void QListWidget_Connect_CurrentItemChanged(void* self, QListWidget_Connect_CurrentItemChanged_action _action);
	[LinkName("QListWidget_CurrentTextChanged")]
	public static extern void QListWidget_CurrentTextChanged(void* self, libqt_string currentText);
	
	public function void QListWidget_Connect_CurrentTextChanged_action(void* self, libqt_string currentText);
	[LinkName("QListWidget_Connect_CurrentTextChanged")]
	public static extern void QListWidget_Connect_CurrentTextChanged(void* self, QListWidget_Connect_CurrentTextChanged_action _action);
	[LinkName("QListWidget_CurrentRowChanged")]
	public static extern void QListWidget_CurrentRowChanged(void* self, c_int currentRow);
	
	public function void QListWidget_Connect_CurrentRowChanged_action(void* self, c_int currentRow);
	[LinkName("QListWidget_Connect_CurrentRowChanged")]
	public static extern void QListWidget_Connect_CurrentRowChanged(void* self, QListWidget_Connect_CurrentRowChanged_action _action);
	[LinkName("QListWidget_ItemSelectionChanged")]
	public static extern void QListWidget_ItemSelectionChanged(void* self);
	
	public function void QListWidget_Connect_ItemSelectionChanged_action(void* self);
	[LinkName("QListWidget_Connect_ItemSelectionChanged")]
	public static extern void QListWidget_Connect_ItemSelectionChanged(void* self, QListWidget_Connect_ItemSelectionChanged_action _action);
	[LinkName("QListWidget_Event")]
	public static extern bool QListWidget_Event(void* self, void** e);
	
	public function void QListWidget_OnEvent_action(void* self, void** e);
	[LinkName("QListWidget_OnEvent")]
	public static extern bool QListWidget_OnEvent(void* self, QListWidget_OnEvent_action _action);
	
	[LinkName("QListWidget_SuperEvent")]
	public static extern bool QListWidget_SuperEvent(void* self, void** e);
	[LinkName("QListWidget_MimeTypes")]
	public static extern void* QListWidget_MimeTypes(void* self);
	
	public function void QListWidget_OnMimeTypes_action(void* self);
	[LinkName("QListWidget_OnMimeTypes")]
	public static extern void* QListWidget_OnMimeTypes(void* self, QListWidget_OnMimeTypes_action _action);
